--- a/css/layout.css
+++ b/css/layout.css
@@ -1,8 +1,7 @@
-h1{
-	background: red;
+body{
+	background-color: rgba(49, 216, 0, 0.7);
 }
 
-li{
-	background: blue;
+#editTask{
+	 margin-top: 8%;
 }
-
