--- a/css/layout.css
+++ b/css/layout.css
@@ -19,6 +19,18 @@ li {
 	padding-top: 2%;
   	overflow-y:hidden;
 }
+.title {
+	height: 20px;
+	/*width: (100 * 5/12)%;
+	margin-right: (100-(100*5/12))%;
+	float: left;
+	background-color: blue;*/
+	
+}
+.simekiri {
+	float: right;
+	margin-right: 9px;
+}
 #datepicker {
 	position: fixed;
 	float: right;
@@ -35,4 +47,9 @@ li {
 	padding-left: 2%;
 	padding-top: 2%;
   	overflow-y:hidden;
+}
+
+.term {
+	margin-right: 20px;
+	float: right;
 }
