--- a/css/layout.css
+++ b/css/layout.css
@@ -8,21 +8,12 @@ body{
 li {
 	margin-bottom: 3%;
 	cursor: pointer;
-	font-weight: bolder;
-	color:#000;
-	font-size:medium;
-}
-h1{
-	text-shadow:5px 5px 20px #fcfcfc;
-}
 
+}
 #box{
 	background-color: rgba(248, 91, 93, 1);
-	/*-webkit-border-radius: 10px;*/
-	-webkit-border-bottom-right-radius: 10px;
-	-webkit-border-bottom-left-radius: 10px;
-	border-bottom-right-radius: 10px;
-	border-bottom-left-radius: 10px;
+	-webkit-border-radius: 10px;
+	border-radius: 10px;
 	height: 290px;
 	padding-left: 2%;
 	padding-top: 2%;
@@ -30,12 +21,6 @@ h1{
 }
 .title {
 	height: 20px;
-	background-color: rgba(248, 91, 93, 1);
-	-webkit-border-top-left-radius: 10px;
-	-webkit-border-top-right-radius: 10px;
-	border-top-left-radius: 10px;
-	border-top-right-radius: 10px;
-	font-weight: 900;
 	/*width: (100 * 5/12)%;
 	margin-right: (100-(100*5/12))%;
 	float: left;
