--- a/business-casual/css/business-casual.css
+++ b/business-casual/css/business-casual.css
@@ -81,6 +81,7 @@ hr {
     padding: 30px 15px;
     background: #fff;
     background: rgba(255,255,255,0.9);
+    height: 2500px;
 }
 
 .intro-text {
