--- a/business-casual/css/business-casual.css
+++ b/business-casual/css/business-casual.css
@@ -81,7 +81,6 @@ hr {
     padding: 30px 15px;
     background: #fff;
     background: rgba(255,255,255,0.9);
-    height: 2500px;
 }
 
 .intro-text {
@@ -127,6 +126,18 @@ footer p {
     height: 400px;
     width: 400px;
     margin-left: 360px;
+}
+.box-login {
+    height: 400px;
+    margin-top: 60px;
+    margin-bottom: 60px; 
+}
+.box-task{
+    height: 500px;
+    margin-bottom: 20px;
+}
+.navi {
+    margin-bottom: 20px;
 }
 @media screen and (min-width:768px) {
     .brand {
