--- a/business-casual/css/business-casual.css
+++ b/business-casual/css/business-casual.css
@@ -129,7 +129,7 @@ footer p {
 }
 .box-login {
     height: 400px;
-    margin-top: 60px;
+    margin-top: 70px;
     margin-bottom: 60px; 
 }
 .box-task{
@@ -145,6 +145,9 @@ footer p {
 .top{
     font-size: 20px;
     text-align: center;
+}
+.anc {
+    height: 30px;
 }
 @media screen and (min-width:768px) {
     .brand {
